Change color to match the daisy

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1481,8 +1481,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #313366;
-    opacity: 0.8;
+    background: rgba(0,0,0,0.45);
     z-index: 3000;
 }
 
