--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1481,11 +1481,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
     left: 0;
     right: 0;
     bottom: 0;
-    background: url("https://media.giphy.com/media/q9fxyuwQ8KoNO/giphy.gif") no-repeat center center fixed;
-    -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+    background-color: #333333;
     opacity: 0.8;
     z-index: 3000;
 }
