--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -26,7 +26,7 @@ body,html{
  cursor: text;
 }
 
-.main-section, .app-section, .spinner-section { 
+.main-section, .app-section, .spinner-section {
 	height: 98%;
 }
 
@@ -38,7 +38,7 @@ body,html{
 
 /* ********** Top Bar Settings ********** */
 
-.tab-bar { 
+.tab-bar {
 	background: #313366;
 	z-index: 1005;
 	position: fixed;
@@ -169,7 +169,7 @@ body,html{
 }
 
 #connection-strength-indicator {
-	height: 100%; 
+	height: 100%;
 	box-sizing: border-box;
 }
 
@@ -194,7 +194,7 @@ body,html{
 
 /* ********** Menu Style ********** */
 
-.right-off-canvas-menu, .left-off-canvas-menu { 
+.right-off-canvas-menu, .left-off-canvas-menu {
 
 	-moz-box-shadow: 0 0 20px rgba(0,0,0,0.2);
 	-webkit-box-shadow: 0 0 20px rgba(0,0,0,0.2);
@@ -242,7 +242,7 @@ body,html{
 	}
 }
 
-.left-menu.icon-bar > * { 
+.left-menu.icon-bar > * {
 	padding: 6px 12px;
 	padding: 0.375rem 0.75rem;
 }
@@ -308,7 +308,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	display: none;
 }
 
-/* 
+/*
 *** Widgets Styles
 */
 
@@ -371,7 +371,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 .widget .tool.err 	{background-image: url('../img/icon_status_red.png');}
 .widget .tool.disc 	{background-image: url('../img/icon_status_grey.png');}
 
-.widget .tools-current .tool { 
+.widget .tools-current .tool {
 	background-color: #999;
 	background-color: rgba(0,0,0,0.2);
 }
@@ -634,13 +634,13 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 }
 
 .progress-container {
-	border: 2px solid black; 
+	border: 2px solid black;
 	background: gray;
 	border-radius: 5px;
 	height: 20px;
 }
 
-.progress { 
+.progress {
 	border-radius: 1px;
 	border: none;
 	background: repeating-linear-gradient(
@@ -754,7 +754,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 }
 
 .app-icon:hover .add-title {
-	color: #666;	
+	color: #666;
 }
 
 .add-title {
@@ -917,7 +917,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
         margin-top: 10px;
         width: 70%;
     }
-    
+
 }
 
 .stopJob {
@@ -930,7 +930,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 .resumeJob {
     background: #32B433;
 	border: solid #00A600 1px;
-    width: 30%;  
+    width: 30%;
     margin-right: -2.5px;
     border-radius: 5px 0 0 5px;
 }
@@ -1018,7 +1018,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
      text-align: center;
      top: 10.5px;
      left: 2px;
-	 font-family: 'source_sans_proextralight'; 
+	 font-family: 'source_sans_proextralight';
 }
 
 .load_container {
@@ -1026,7 +1026,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
     width: 190px;
 	float: right;
 	margin-right: 15px;
-	
+
 }
 .load_container .loading_bar {
     float: left;
@@ -1206,7 +1206,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 .keypad-bar.top i {
    position: relative;
    top: -15px;
-    
+
 }
 
 .top.button-border{
@@ -1228,7 +1228,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 .keypad-bar.bottom i {
    position: relative;
    bottom: -35px;
-    
+
 }
 
 .keypad-bar.bottom {
@@ -1414,7 +1414,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
     height: 23px;
     border: 1px solid #FEFEFE;
     border-radius: 50%;
-   
+
 }
 
 .drobuttonInnerS{
@@ -1503,7 +1503,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
      color: #333333;
     padding: 0;
     margin: 0;
-   
+
 }
 .modalSubContent{
     display: inline-block;
@@ -1535,7 +1535,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
     display: inline-block;
     margin-right: 1em;
     width: 65%;
-    
+
     padding: 0;
 }
 
@@ -1575,4 +1575,16 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 
 .toast {
     opacity:0.9 !important;
+}
+
+
+.logout_link_container{
+  bottom: 0;
+  position: inherit;
+  width: inherit;
+  text-align: center;
+  background-color: #666666;
+}
+.logout_link_container a{
+  color: #eeeeee;
 }
