--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -26,6 +26,14 @@ body,html{
  cursor: text;
 }
 
+.success {
+
+}
+
+.error {
+
+}
+
 .main-section, .app-section, .spinner-section { 
 	height: 98%;
 }
