Closes #367 - Fix to editing historical jobs/macros

--- a/dashboard/apps/editor.fma/css/style.css
+++ b/dashboard/apps/editor.fma/css/style.css
@@ -20,3 +20,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hidden, .hide { display:none; }
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
