--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -135,6 +135,10 @@ h1, h2, h3, h4, h5, h6 {
       top: 50%; left: 50%;
       transform: translate(-50%,-50%);
  }
+ 
+ .submitActions p {
+     margin: 0;
+ }
 
  .with-job{
    position: absolute;
