--- a/dashboard/apps/configuration.fma/css/style.css
+++ b/dashboard/apps/configuration.fma/css/style.css
@@ -8,6 +8,17 @@ h1, h2, h3, h4, h5, h6 {
   color: #666;
 }
 
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+}
+
 #engine-version {
   color: #888888;
 }
@@ -442,3 +453,157 @@ td.edit span{
     transform: rotate(450deg);
   }
 }
+
+
+/* APP STUFF */
+
+.delete-button {
+  background-size: 100% 100%;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  padding: .7em;
+  border: 1px solid #444444;
+  border-radius: 5px;
+  box-shadow: .5px .5px .5px #aaaaaa;
+}
+
+
+#dropzone .hovershow {
+  opacity: 0.0;
+} 
+
+#dropzone .hoverdim {
+  opacity: 1.0;
+}
+
+#dropzone.hover { 
+  width: 99%;
+  border: 5px dashed #ccc; 
+  border-radius: 10px;
+ 
+}
+ 
+#dropzone.hover .hovershow {
+  opacity: 1.0;
+}
+
+#dropzone.hover .hoverdim {
+  opacity: 0.2;
+}
+
+#dropzone .message {
+  z-index: 3;
+  display: block; 
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  color: black;
+  font-weight: bold;
+  font-style: italic;
+  width:100%;
+  margin: 0 0 0 -50%;
+  opacity: 0%;
+}
+
+.app-icon {
+  width: 50px;
+  height: 50px;
+  min-width: 50px;
+  border-radius: 5px;
+  padding: 5px;
+  box-shadow: 1px 1px 1px #aaaaaa;
+}
+/*
+  width: 100px;
+  width: 6.25rem;
+  height: 100px;
+  height: 6.25rem;
+  line-height: 76px;
+  padding: 12px;
+  padding: 0.75rem;
+  border-radius: 8px;
+  border-radius: 0.5rem;
+  border: dashed 3px #bbb;
+  color: #bbb;
+  font-size: 35px;
+*/
+.app-ghost {
+  width: 50px;
+  height: 50px;
+  min-width: 50px;
+  border-radius: 5px;
+  border: dashed 2px #bbb;
+}
+
+.hidden, .hide { display:none; }
+
+.modal-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #000;
+    opacity: 0.5;
+    z-index: 9;
+    display: none;
+}
+
+.modal-content{
+    background-color: rgba(20,20,20,0.98);
+    text-align: center;
+    width: 60%;
+    min-height: 200px;
+    box-shadow: 0 50px 100px rgba(0,0,0,0.8);
+    position: fixed;
+    top: -500%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    border-radius: 5px;
+    max-width: 500px;
+    min-width: 300px;
+    padding: 4em 1em 0 1em;
+    transition: all .5s;
+}
+
+
+.deleteCancel{
+    position: absolute;
+    width: 50%;
+    bottom: 0;
+    left: 0;
+    background-color: #444444;
+    opacity: 1;
+    border-radius: 0 0 0 5px;
+}
+
+.deleteCancel:hover{
+    background-color: #444444;
+}
+
+.deleteCancel:focus{
+    background-color: #444444;
+}
+
+.deleteOkay{
+    position: absolute;
+    width: 50%;
+    bottom: 0;
+    right: 0;
+    background-color: #32B433;
+    opacity: 1;
+    border-radius: 0 0 5px 0;
+}
+
+.deleteOkay:hover{
+    background-color: #32B433;
+}
+
+.deleteOkay:focus{
+    background-color: #32B433;
+}
+
