--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1479,6 +1479,7 @@ input[type=number]::-webkit-outer-spin-button {
     background-color: #eee;
     padding-top: 1.5em;
     border-radius: 5px;
+      -webkit-font-smoothing: antialiased;
 }
 
 .modalDim{
@@ -1516,6 +1517,8 @@ input[type=number]::-webkit-outer-spin-button {
 .modalSubContent{
     display: inline-block;
     width: 100%;
+  
+
 }
 .modalImage{
     position: relative;
