--- a/dashboard/apps/configuration.fma/css/style.css
+++ b/dashboard/apps/configuration.fma/css/style.css
@@ -1,5 +1,3 @@
-/* Foundation OverWrite */
-
 body {
   background: #eee;
 }
@@ -7,7 +5,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: #666;
 }
-
 
 .noselect {
     -webkit-touch-callout: none;
@@ -24,38 +21,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 fieldset {
   color: #000000;
-}
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 1.5em;
 
-.alert-box .close {
-  color: #eee;
-  filter: alpha(opacity=95); /* For IE8 and earlier */
-  opacity: 0.95;
-}
-
-.reveal-modal {
-  padding: 13px;
-  padding: 0.8125rem;
-  min-height: none;
-}
-
-.reveal-modal .row.title {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 10px;
-  margin-bottom: 0.625em;
-}
-
-.button-group>li { margin: 0; }
-
-.button-bar .button-group { margin-right: 0; }
-
-.button-bar .button-group li:first-child a {
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.button-bar .button-group li:last-child a {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
 
 button.small, .button.small {
@@ -78,13 +49,6 @@ button.small, .button.small {
   }
 }
 
-table {
-  margin-bottom: 8px; 
-  margin-bottom: 0.5em;
-}
-
-.btn { padding: 0;}
-
 td input, td select {margin:0 !important;}
 
 td.switch {
@@ -102,66 +66,6 @@ a:focus {
 }
 
 header { padding: 0 3rem;}
-
-input[type="file"] {
-  color: #444;
-  height: 21px;
-  height: 2.3125rem;
-  padding: 8px;
-  padding: 0.5rem;
-}
-
-input[type="file"]::-webkit-file-upload-button {
-  visibility: hidden !important;
-  padding:0 !important;
-}
-
-input[type="file"]::before,
-input[type="file"]::-webkit-file-upload-button {
-  content: 'Select a file';
-  color: #eee;
-  display: inline-block;
-  background: #313366;
-  border: 1px solid #272952;
-  padding: 8px;
-  padding: 0.5rem;
-  outline: none;
-  #fff-space: nowrap;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  cursor: pointer;
-  width:33%;
-  text-align: center;
-  position: absolute;
-  top:0;
-  left:0;
-   -webkit-transition: background-color .5s;
-  transition: background-color .5s;
-}
-
-input[type="file"]:hover::before {
-  background-color: #272952;
-  -webkit-transition: background-color .3s;
-  transition: background-color .3s;
-}
-
-input[type="file"]:active {
-  outline: 0;
-}
-
-input[type="file"]:active::before {
-  background: #e3e3e3; /* Old browsers */
-  background: -moz-linear-gradient(top,  #e3e3e3 0%, #f9f9f9 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#e3e3e3), color-stop(100%,#f9f9f9)); /* Chrome,Safari4+ */
-  background : -webkit-linear-gradient(top, #e3e3e3 0%, #f9f9f9 100%); /* Chrome10+,Safari5.1+ */
-  background: -o-linear-gradient(top,  #e3e3e3 0%,#f9f9f9 100%); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top,  #e3e3e3 0%,#f9f9f9 100%); /* IE10+ */
-  background: linear-gradient(to bottom,  #e3e3e3 0%,#f9f9f9 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e3e3e3', endColorstr='#f9f9f9',GradientType=0 ); /* IE6-9 */
-}
 
 /*
 *** Section ***
@@ -189,20 +93,6 @@ section.container {
   padding-bottom: 0.125rem;
 }
 
-section.current-job-container p {
-  font-size: 17px;
-  font-size: 1.0625rem;
-  margin-bottom: 0;
-  color: #666;
-}
-
-section.current-job-container .btn {
-  padding-left: 0;
-  padding-right: 0;
-}
-
-section .no-jobs-item { cursor: pointer; }
-
 @media only screen and (max-width: 64.063em) and (min-width: 40.063em){
   section.container {
     margin-left: 5%;
@@ -224,11 +114,8 @@ section .no-jobs-item { cursor: pointer; }
 section > .row:not(.title) , .separator{
   padding-top: 6px;
   padding-top : 0.375rem;
-  padding-bottom: 6px;
-  padding-bottom: 0.375rem;
   margin-bottom: 10px;
   margin-bottom: 0.625em;
-  border-bottom: 1px solid #ccc;
   line-height: 40rem;
   line-height: 2.5rem;
   vertical-align: middle;
@@ -239,186 +126,18 @@ section > .row:last-child, section > .content:last-child  > .row {
   border-bottom: none;
 }
 
-
-
-/*
-*** Colors ***
-*/
-td[type="color"] div {
-  width: 32px;
-  width: 2rem;
-  height: 32px;
-  height: 2rem;
-  display: inline-block;
-  margin-right: 12px;
-  margin-right: 0.75rem;
-  border-radius: 16px;
-  border-radius: 1rem;
-  -moz-box-shadow: 0 0 3px rgba(0,0,0,0.4);
-  -webkit-box-shadow: 0 0 3px rgba(0,0,0,0.4);
-  box-shadow: 0 0 3px rgba(0,0,0,0.4);
+.tabs-content>.content {
+  padding: 0;
 }
-
-td[type="color"] div.selected {
-  -moz-box-shadow: inset 0 0 1rem 1rem rgba(255,255,255,0.5);
-  -webkit-box-shadow: inset 0 0 1rem 1rem rgba(255,255,255,0.5);
-  box-shadow: inset 0 0 1rem 1rem rgba(255,255,255,0.5);
-}
-
-td[type="color"] div:hover {
-  cursor:pointer;
-}
-
-td[type="color"] div.add {
-  background : url('../img/icon_plus_cross.png') #fff no-repeat center;
-  background-size: 16px;
-  background-size: 1rem;
-}
-
-
-/*
-*** Tasks Lists ***
-*/
-
-tr.current {
-  background-color: rgb(221,135,40);
-  background-color: rgba(221,135,40,0.8);
-}
-
-tr.current td { color:#fff; }
-
-td.delete:hover, td.edit:hover {
-  cursor:pointer;
-}
-
-td.delete, td.edit {
-  padding: 0 3px;
-  padding: 0 0.1875rem;
-}
-
-td.delete span {
-  background-color: #9c210c;
-  color: #fff;
-  border-radius: 16px;
-  border-radius: 1rem;
-  padding: 5px 8px;
-  padding: 0.3125rem 0.5rem;
-}
-
-td.edit span{
-  background-color: #666;
-  color:#fff;
-  border-radius: 1rem;
-  padding: 5px 8px;
-  padding: 0.3125rem 0.5rem;
-}
-
-
-/* Special Custom Style : rotations et animations */
-.spinner {
-  -webkit-animation: rotator 1.4s linear infinite;
-  animation: rotator 1.4s linear infinite;
-}
-
-@-webkit-keyframes rotator {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(270deg);
-    transform: rotate(270deg);
-  }
-}
-
-@keyframes rotator {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(270deg);
-    transform: rotate(270deg);
-  }
-}
-.path {
-  stroke-dasharray: 187;
-  stroke-dashoffset: 0;
-  -webkit-transform-origin: center;
-  -ms-transform-origin: center;
-  transform-origin: center;
-  -webkit-animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
-}
-
-@-webkit-keyframes colors {
-  0% {
-    stroke: #4285F4;
-  }
-  25% {
-    stroke: #DE3E35;
-  }
-  50% {
-    stroke: #F7C223;
-  }
-  75% {
-    stroke: #1B9A59;
-  }
-  100% {
-    stroke: #4285F4;
-  }
-}
-
-@keyframes colors {
-  0% {
-    stroke: #4285F4;
-  }
-  25% {
-    stroke: #DE3E35;
-  }
-  50% {
-    stroke: #F7C223;
-  }
-  75% {
-    stroke: #1B9A59;
-  }
-  100% {
-    stroke: #4285F4;
-  }
-}
-@-webkit-keyframes dash {
-  0% {
-    stroke-dashoffset: 187;
-  }
-  50% {
-    stroke-dashoffset: 46.75;
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-  100% {
-    stroke-dashoffset: 187;
-    -webkit-transform: rotate(450deg);
-    transform: rotate(450deg);
-  }
-}
-@keyframes dash {
-  0% {
-    stroke-dashoffset: 187;
-  }
-  50% {
-    stroke-dashoffset: 46.75;
-    -webkit-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-  100% {
-    stroke-dashoffset: 187;
-    -webkit-transform: rotate(450deg);
-    transform: rotate(450deg);
-  }
-}
-
-
 /* APP STUFF */
+/*
+table {
+  width: 100%;
+}*/
+
+.row {
+  max-width: none;
+}
 
 .delete-button {
   background-size: 100% 100%;
