f fix and exp spinner

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1590,3 +1590,68 @@ input[type=number]::-webkit-outer-spin-button {
 .toast {
     opacity:0.9 !important;
 }
+
+.loader {
+  font-size: 150px;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: relative;
+  top: 40%;
+  margin-left: auto;
+  margin-right: auto;
+  -webkit-animation: spinner 1.7s infinite ease;
+  animation: spinner 1.7s infinite ease;
+  z-index: 3000000000;
+}
+@-webkit-keyframes spinner {
+  0% {
+    
+    box-shadow: 0 -.82em 0 -0.43em #313366, 0 -0.82em 0 -0.43em #313366, 0 -0.82em 0 -0.43em #313366;
+  }
+  5%,
+  95% {
+    box-shadow: 0 -0.82em 0 -0.43em #313366, 0 -0.82em 0 -0.43em #313366, 0 -0.82em 0 -0.43em #313366;
+  }
+  10%,
+  59% {
+    box-shadow: 0 -0.83em 0 -0.45em #9C210C, -0.087em -0.825em 0 -0.45em #5DAA35, -0.173em -0.812em 0 -0.45em #DD8728;
+  }
+  20% {
+    box-shadow: 0 -0.83em 0 -0.46em #9C210C, -0.338em -0.758em 0 -0.46em #5DAA35, -0.555em -0.617em 0 -0.46em #DD8728;
+  }
+  38% {
+    box-shadow: 0 -0.83em 0 -0.47em #9C210C, -0.377em -0.74em 0 -0.47em #5DAA35, -0.645em -0.522em 0 -0.47em #DD8728;
+  }
+  100% {
+     -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+    box-shadow: 0 -0.82em 0 -0.43em #313366, 0 -0.82em 0 -0.43em #313366, 0 -0.82em 0 -0.43em #313366;
+  }
+}
+@keyframes spinner {
+  0% {
+     -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+    box-shadow: 0 -.8em 0 -0.42em #313366, 0 -0.8em 0 -0.42em #313366, 0 -0.8em 0 -0.42em #313366;
+  }
+  5%,
+  95% {
+    box-shadow: 0 -0.8m 0 -0.42em #313366, 0 -0.8em 0 -0.42em #313366, 0 -0.8em 0 -0.42em #313366;
+  }
+  10%,
+  59% {
+    box-shadow: 0 -0.8em 0 -0.45em #9C210C, -0.087em -0.825em 0 -0.45em #5DAA35, -0.173em -0.812em 0 -0.45em #DD8728;
+  }
+  20% {
+    box-shadow: 0 -0.8em 0 -0.46em #9C210C, -0.338em -0.758em 0 -0.46em #5DAA35, -0.555em -0.617em 0 -0.46em #DD8728;
+  }
+  38% {
+    box-shadow: 0 -0.8em 0 -0.47em #9C210C, -0.377em -0.74em 0 -0.47em #5DAA35, -0.645em -0.522em 0 -0.47em #DD8728;
+  }
+  100% {
+     -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+    box-shadow: 0 -0.8em 0 -0.42em #313366, 0 -0.8em 0 -0.42em #313366, 0 -0.8em 0 -0.42em #313366;
+  }
+}
