--- a/dashboard/apps/macro_manager.fma/css/style.css
+++ b/dashboard/apps/macro_manager.fma/css/style.css
@@ -1,5 +1,3 @@
-/* Foundation OverWrite */
-
 body {
   background: #eee;
 }
@@ -31,11 +29,13 @@ td.run-control img {
     margin-left: .5em;
     padding: .3em;
     border-radius: 5px;
-    border: 1px solid #333333;
+    border: 1px solid #bbb;
     box-shadow: .5px .5px .5px #aaaaaa;
     transform: translateX(-5px);
     height: 40px;
     width: 40px;
+    background: white;
+
 }
 
 td.edit-control {
@@ -47,11 +47,12 @@ td.edit-control {
 
 td.edit-control img{
     padding: .5em;
-    border: 1px solid #333333;
+    border: 1px solid #bbb;
     border-radius: 5px;
     box-shadow: .5px .5px .5px #aaaaaa;
     height: 40px;
     width: 40px;
+    background: white;
 }
 
 td.delete-control {
@@ -64,10 +65,11 @@ td.delete-control {
 td.delete-control img {
     padding: .5em;
     border-radius: 5px;
-    border: 1px solid #333333;
+    border: 1px solid #bbb;
     box-shadow: .5px .5px .5px #aaaaaa;
     height: 40px;
     width: 40px;
+    background: white;
 }
 
 @media screen and (max-width: 480px) {
@@ -78,69 +80,35 @@ td.delete-control img {
     }
 }
 
-tr.shown td.details-control {
-    background: url('images/details_close.png') no-repeat center center;
-    width: 40px;
+.table-outer {
+  margin: 1em;
 }
 
-.child-row-label {
-  font-weight: bold;
-  color: red;
+input[type=text] { 
+ -moz-user-select: text;
+ -khtml-user-select: text;
+ -webkit-user-select: text;
+ -ms-user-select: text;
+ user-select: text;
+ cursor: text;
+ border: none;
+ background: inherit;
+ box-shadow: none;
 }
 
+input[type=number] { 
+ -moz-user-select: text;
+ -khtml-user-select: text;
+ -webkit-user-select: text;
+ -ms-user-select: text;
+ user-select: text;
+ cursor: text;
+ border: none;
+ background: inherit;
+ box-shadow: none;
+}
 
 .hidden, .hide { display:none; }
 
-section .title {
-  border-bottom: 1px solid #ccc;
-  margin-bottom: 10px;
-  margin-bottom: 0.625em;
-}
-
-section .title .button { margin-bottom: 0; }
-
-section .center { text-align: center; }
-
-section.container {
-  background-color: #fff;
-  -moz-box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
-  box-shadow: 1px 1px 5px 0 rgba(0, 0, 0, 0.15);
-  border: 1px solid #ccc;
-  margin: 0;
-  padding: 0.5rem;
-}
-
-@media only screen and (max-width: 64.063em) and (min-width: 40.063em){
-  section.container {
-    margin: 2em;
-  }
-}
-
-@media only screen and (min-width: 40.063em) {
-
-  section.container {
-    border-radius: 5px; 
-    margin: 2em;
-  }
-}
-
-section > .row:not(.title) , .separator{
-  padding-top: 6px;
-  padding-top : 0.375rem;
-  padding-bottom: 6px;
-  padding-bottom: 0.375rem;
-  margin-bottom: 10px;
-  margin-bottom: 0.625em;
-  border-bottom: 1px solid #ccc;
-  line-height: 40rem;
-  line-height: 2.5rem;
-  vertical-align: middle;
-}
-
-section > .row:last-child, section > .content:last-child  > .row {
-  padding-bottom: 0;
-  border-bottom: none;
-}
 
 
