Various fixes to config, make machine id and name more compatible with older versions of updater.  Delete cruft.

--- a/dashboard/apps/configuration.fma/css/style.css
+++ b/dashboard/apps/configuration.fma/css/style.css
@@ -307,3 +307,10 @@ table {
     background-color: #32B433;
 }
 
+#section-machine-name {
+  display: none;
+}
+
+#section-machine-id {
+  display: none;
+}
