--- a/dashboard/apps/configuration.fma/css/style.css
+++ b/dashboard/apps/configuration.fma/css/style.css
@@ -307,3 +307,20 @@ table {
     background-color: #32B433;
 }
 
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance:none;
+    appearance: none;
+    margin: 0; 
+}
+
+input[type=number] {
+  -webkit-appearance: textfield;
+    -moz-appearance:textfield;
+    appearance: textfield;
+}
+
+select {
+   -moz-appearance:none;
+}
