add full user management support

--- a/dashboard/apps/configuration.fma/css/style.css
+++ b/dashboard/apps/configuration.fma/css/style.css
@@ -273,6 +273,12 @@ table {
 
 .hidden, .hide { display:none; }
 
+
+#modal-title {
+  font-weight: 700;
+  color: #2E3865;
+}
+
 .modal-background {
     position: fixed;
     top: 0;
