--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -59,10 +59,12 @@ body {
 .hover #droptarget {
   visibility: visible;
   opacity: 1;
-  position: absolute;
+  position: fixed;
   text-align: center;
-  width: 100%;
-  height: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
   color: #444444;
   background-image: url('../images/droptarget.png');
   background-repeat: no-repeat;
@@ -71,6 +73,7 @@ body {
   -webkit-transition: opacity .2s ease;
   -moz-transition: opacity .2s ease;
   -o-transition: opacity .2s ease;
+  z-index: 10;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -202,6 +205,7 @@ td.actions-control {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: .5em;
+  margin-top: 2em;
   padding: 1em;
   -webkit-transition: ALL .1s;
   -moz-transition: ALL .1s;
