bar and spinner improvements

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -869,15 +869,15 @@ input[type=number]::-webkit-outer-spin-button {
 	display: block;
 	text-align: center;
 	width: 150px;
-	margin-top: 5px;
+	margin-top: 10px;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 10px;
 	font-family: Arial;
 	color: #ffffff;
-	font-size: 17px;
+	font-size: 30px;
 	background: #ff0000;
-	padding: 3.5px 50px 3.5px 50px;
+
 	border: solid #A60000 4px;
 	text-decoration: none;
 	transition: all 1s;
@@ -891,14 +891,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 
-.resumeJob.blink{
-	background-color: #00A600;
-	border: solid #00ff00 4px;
-	transition: all 1s;
-}
 
 .fabmo-resume-stop {
-    margin-top: 7px;
+    margin-top: 15px;
     width: 35%;
     display: block;
     text-align: center;
@@ -913,18 +908,20 @@ input[type=number]::-webkit-outer-spin-button {
 	font-family: Arial;
 	color: #ffffff;
 	font-size: 17px;
+	line-height: 2em;
 	padding-top: 3.5px;
 	padding-bottom: 3.5px;
 	text-decoration: none;
 	transition: all 1s;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 780px){
     .fabmo-resume-stop div {
-        font-size: 13px;
+        font-size: 14px;
+		line-height: 2.5em;
     }
     .fabmo-resume-stop {
-        margin-top: 10px;
+        margin-top: 15px;
         width: 70%;
     }
 
@@ -952,7 +949,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .currentContainer {
-	margin-top: 12px;
+	margin-top: 25px;
 	margin-left: 1em;
 	float: left;
 	overflow: scroll;
@@ -968,45 +965,45 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .radial_progress {
-	margin-top: 5px;
+	margin-top: 14px;
     background-color: #444444;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     border-radius: 50%;
 	float: right;
 	display: none;
-	margin-right: 20px;
+	margin-right: 10px;
 }
 
 .fill {
     background-color: #5DA423;
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     transition: -webkit-transform 1s;
     transition: -ms-transform 1s;
     transition: transform 1s;
     position: absolute;
-    clip: rect(0px, 20px, 40px, 0px);
+    clip: rect(0px, 25px, 50px, 0px);
     -webkit-backface-visibility: hidden;
     border-radius: 50%;
 }
 
 .perecent_circle .mask {
-      clip: rect(0px,40px,40px,20px);
-      height: 40px;
-      width: 40px;
+      clip: rect(0px,50px,50px,25px);
+      height: 50px;
+      width: 50px;
       position: absolute;
       transition: -webkit-transform 1s;
         transition: -ms-transform 1s;
             transition: transform 1s;
 }
 .mask .fill {
-    clip: rect(0px, 20px, 40px, 0px);
+    clip: rect(0px, 25px, 50px, 0px);
 }
 .inset {
     background-color: #333333;
-    width: 32px;
-    height: 32px;
+    width: 42px;
+    height: 42px;
     position: absolute;
     margin-left: 4px;
     margin-top: 4px;
@@ -1014,8 +1011,8 @@ input[type=number]::-webkit-outer-spin-button {
     box-shadow: 3px 3px 5px rgba(0,0,0,0.2);
 }
 .shadow {
-      width: 40px;
-      height: 40px;
+      width: 50px;
+      height: 50px;
       position: absolute;
       border-radius: 50%;
       box-shadow: inset 3px 3px 5px rgba(0,0,0,0.2);
@@ -1023,19 +1020,19 @@ input[type=number]::-webkit-outer-spin-button {
 
 .inset .percentage {
      color: #5DA423;
-     font-size: 11px;
-     width: 28px;
+     font-size: 15px;
+     width: 40px;
      position: absolute;
      line-height: 1;
      text-align: center;
-     top: 10.5px;
+     top: 14px;
      left: 2px;
 	 font-family: 'source_sans_proextralight';
 }
 
 .load_container {
-	margin-top: 12px;
-    width: 190px;
+	margin-top: 20px;
+    width: 200px;
 	float: right;
 	margin-right: 15px;
 
@@ -1044,7 +1041,7 @@ input[type=number]::-webkit-outer-spin-button {
     float: left;
     background-color: #444444;
     width: 150px;
-    height: 20px;
+    height: 30px;
     border-radius: 5px;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5) inset,
         0px 0.3px 0px 0px rgba(200, 200, 200, 0.5);
@@ -1053,7 +1050,7 @@ input[type=number]::-webkit-outer-spin-button {
 .loading_bar .horizontal_fill {
     background-color: #5DA423;
     position: relative;
-    height: 18.5px;
+    height: 28.5px;
     width: 100%;
     top: 1px;
     left: 1px;
@@ -1064,8 +1061,8 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .percent_comp {
 	float: right;
-    top: 1.9px;
-	font-size: 15px;
+	margin: 3px;
+	font-size: 17px;
 	color: #F0F0F0;
 	font-family: 'source_sans_proextralight';
 }
@@ -1340,8 +1337,9 @@ input[type=number]::-webkit-outer-spin-button {
     to {transform:rotate(360deg);}
 }
 
-.st0 {
-	animation: spin .5s ease infinite;
+.maingear {
+	transform-origin: 50% 50%;
+	animation: spin 4s linear infinite;
 }
 
  /*Old chipfly animation*/
@@ -1587,6 +1585,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .modalOkay{
+	color: #fff;
     padding-top: .5em;
     cursor: pointer;
     display: inline-block;
@@ -1599,6 +1598,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .modalCancel{
+	color: #fff;
     padding-top: .5em;
     cursor: pointer;
     display: inline-block;
@@ -1614,20 +1614,26 @@ input[type=number]::-webkit-outer-spin-button {
     opacity:0.9 !important;
 }
 
+
 .loader {
-  font-size: 150px;
-  width: 1em;
-  height: 1em;
-  border-radius: 50%;
-  position: relative;
-  top: 40%;
-  margin-left: auto;
-  margin-right: auto;
-  -webkit-animation: spinner 1.7s infinite ease;
-  animation: spinner 1.7s infinite ease;
-  z-index: 3000000000;
+	position: absolute;
+  	width: 100%;
+	height: 100%;
+	margin: auto;
+	text-align: center;
 }
-@-webkit-keyframes spinner {
+
+
+.loader svg {
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+}
+
+
+
+/*Old loading spinner*/
+/*@-webkit-keyframes spinner {
   0% {
 
     box-shadow: 0 -.82em 0 -0.43em #313366, 0 -0.82em 0 -0.43em #313366, 0 -0.82em 0 -0.43em #313366;
@@ -1677,7 +1683,7 @@ input[type=number]::-webkit-outer-spin-button {
     transform: rotate(360deg);
     box-shadow: 0 -0.8em 0 -0.42em #313366, 0 -0.8em 0 -0.42em #313366, 0 -0.8em 0 -0.42em #313366;
   }
-}
+}*/
 
 .logout_link_container{
   bottom: 0;
