--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -881,7 +881,7 @@ input[type=number]::-webkit-outer-spin-button {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 0px;
+	height: 180px;
 	background-color: #333333;
 	z-index: 1006;
 	display: block;
@@ -889,31 +889,113 @@ input[type=number]::-webkit-outer-spin-button {
 	box-shadow: 0px -2px 15px -6px rgba(0,0,0,0.75);
 }
 
+.pauseJob p {
+	position: relative;
+  	text-align: center;
+	color: #ffffff;
+	font-size: 3em;
+	font-family: Arial;
+	z-index: 10;
+	padding-top: 40px;
+}
+
+
+
+.pauseJob:before,
+
+.pauseJob:after,
+
+.pauseJobInner:before,
+
+.pauseJobInner:after { background: #A60000; }
+.pauseJobInner:after.blink { background-color: #ff0000; }
+
 .pauseJob {
     cursor: pointer;
 	position: relative;
 	display: block;
 	text-align: center;
 	width: 150px;
-	margin-top: 10px;
+	height: 150px;
+	margin-top: 15px;
+	padding-bottom: 15px;
 	margin-left: auto;
 	margin-right: auto;
-	border-radius: 10px;
-	font-family: Arial;
-	color: #ffffff;
-	font-size: 30px;
-	background: #ff0000;
-
-	border: solid #A60000 4px;
+	background: #333333;
 	text-decoration: none;
-	transition: all 1s;
+	overflow: hidden;
 }
 
-.pauseJob.blink{
-	background-color: #A60000;
-	border: solid #ff0000 4px;
-	transition: all 1s;
+.pauseJob:before,
+.pauseJob:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 5px;
+  
+  height: 60px;
+  margin-top: -30px;
+  z-index: 1;
 }
+.pauseJob:after {
+  left: auto;
+  right: 0;
+  margin-top: -30px;
+  height: 60px;
+
+}
+
+.pauseJobInner {
+  position: absolute;
+  top: 0px;
+  width: 150px;
+  height: 150px;
+  background: #ff0000;
+  border: 5px solid #A60000;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  transition: all 2s linear;
+}
+
+.pauseJobInner:before,
+.pauseJobInner:after {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  content: "";
+  position: absolute;
+  width: 5px;
+  
+  height: 60px;
+  margin-top: -30px;
+  z-index: 1;
+  right: auto;
+  left: 16px;
+  bottom: auto;
+  top: 19px;
+  transition: all 2s linear;
+}
+
+.pauseJobInner:after {
+  height: 60px;
+  right: 16px;
+  left: auto;
+  bottom: -12px;
+  top: auto;
+  transition: all 2s linear;
+}
+
+
+
+.pauseJobInner.blink{
+	border: 5px solid #ff0000;
+	background-color: #A60000;
+	transition: all 2s linear;
+}
+
+
+
+
 
 
 
