--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -881,7 +881,7 @@ input[type=number]::-webkit-outer-spin-button {
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 180px;
+	height: 0px;
 	background-color: #333333;
 	z-index: 1006;
 	display: block;
@@ -913,14 +913,14 @@ input[type=number]::-webkit-outer-spin-button {
 .pauseJob {
     cursor: pointer;
 	position: relative;
+	margin-left: auto;
+	margin-right: auto;
 	display: block;
 	text-align: center;
 	width: 150px;
 	height: 150px;
 	margin-top: 15px;
 	padding-bottom: 15px;
-	margin-left: auto;
-	margin-right: auto;
 	background: #333333;
 	text-decoration: none;
 	overflow: hidden;
@@ -1001,8 +1001,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 .fabmo-resume-stop {
-    margin-top: 15px;
-    width: 35%;
+    margin-top: 50px;
+    width: 400px;
     display: block;
     text-align: center;
     margin-right: auto;
@@ -1016,7 +1016,7 @@ input[type=number]::-webkit-outer-spin-button {
 	font-family: Arial;
 	color: #ffffff;
 	font-size: 17px;
-	line-height: 2em;
+	line-height: 3.3em;
 	padding-top: 3.5px;
 	padding-bottom: 3.5px;
 	text-decoration: none;
@@ -1026,11 +1026,11 @@ input[type=number]::-webkit-outer-spin-button {
 @media only screen and (max-width: 780px){
     .fabmo-resume-stop div {
         font-size: 14px;
-		line-height: 2.5em;
+		line-height: 3.5em;
     }
     .fabmo-resume-stop {
-        margin-top: 15px;
-        width: 70%;
+        margin-top: 60px;
+        width: 300px;
     }
 
 }
@@ -1050,37 +1050,46 @@ input[type=number]::-webkit-outer-spin-button {
     border-radius: 5px 0 0 5px;
 }
 
-.quitJob.blink{
-	background-color: #00A600;
-	border: solid #00ff00 4px;
-	transition: all 1s;
-}
+
 
 .currentContainer {
-	margin-top: 25px;
-	margin-left: 1em;
+	margin-top: 65px;
+	margin-left: 2em;
 	float: left;
-	overflow: scroll;
-    max-width: 250px;
+	overflow: hidden;
+    max-width: 200px;
+	max-height: 100px;
 }
 
 .currentJobTitle {
 	color: #F0F0F0;
+	font-size: 20px;
 	font-family: 'source_sans_proextralight';
     white-space: nowrap;
 	text-align: center;
 
 }
 
+@media only screen and (max-width: 450px){
+	.currentContainer {
+		max-width: 50px;
+		margin-left: 1em;
+	}
+
+	.currentJobTitle {
+		 font-size: 15px;
+	}
+}
+
 .radial_progress {
-	margin-top: 10px;
+	margin-top: 55px;
 	background-color: #444444;
 	height: 50px;
 	width: 50px;
 	border-radius: 50%;
 	float: right;
 	display: none;
-	margin-right: 10px;
+	margin-right: 1em;
 }
 
 .fill {
@@ -1139,7 +1148,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .load_container {
-	margin-top: 20px;
+	margin-top: 65px;
     width: 200px;
 	float: right;
 	margin-right: 15px;
@@ -1176,6 +1185,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .elapsed_time{
+	font-family: 'source_sans_proextralight';
     display: inline-flex;
     width: 200px;
     margin-right: auto;
@@ -1185,17 +1195,25 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 .elapsed_time_small{
+	font-family: 'source_sans_proextralight';
     display: block;
     width: 55px;
     text-align: center;
     color:#F0F0F0;
-    margin-top: 45px;
+	font-size: 10px;
+    margin-top: 50px;
+}
+.elapsed_time_label{
+	margin-right: 5px;
 }
 
-.elapsed_time_label{
-    margin-right: 5px;
-    font-weight: bold;
-}
+.elapsed_time_small p{
+	font-size: 10px;
+	margin: 0;
+	display: inline;
+} 
+
+
 
 /* ********** Page (#modal_container) container ********** */
 #modal_container {
