--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
 }
 
-.running { 
+.running {
   animation: pulse 2s infinite;
 }
 .running .inset {
@@ -41,16 +41,16 @@ body {
 }
 
 #tabpending{
-    
+
 }
 
-.hover .hoverdim { 
+.hover .hoverdim {
   -webkit-transition: opacity .2s ease;
   -moz-transition: opacity .2s ease;
   -o-transition: opacity .2s ease;
   opacity: 0.2;
 }
-  
+
 #droptarget {
   visibility: hidden;
   opacity: 0;
@@ -78,7 +78,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color: #666;
-} 
+}
 .jobs-title:first-child {
   min-height: 40px;
 }
@@ -93,7 +93,7 @@ h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
    transition: all 0.5s;
  }
- 
+
  .no-jobs {
    position: absolute;
    left: -2000px;
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
  }
 
  .without-job{
- 
+
    top: 0;
    transition: all 0.5s;
    width: 100%;
@@ -121,29 +121,29 @@ h1, h2, h3, h4, h5, h6 {
    height: 150px;
    background-color: #fff;
  }
- 
+
  .without-job img{
      height: 55px;
      width: auto;
  }
- 
+
  .without-job p {
      color: #666666
  }
- 
+
  .submitWrapper{
      position: relative;
      height: 100%;
      width: 100%;
  }
- 
+
  .submitActions{
      text-align: center;
       position: absolute;
       top: 50%; left: 50%;
       transform: translate(-50%,-50%);
  }
- 
+
  .submitActions p {
      margin: 0;
  }
@@ -153,9 +153,9 @@ h1, h2, h3, h4, h5, h6 {
    left: -2000px;
    top: 0;
    transition: all 0.5s;
- 
+
  }
- 
+
  .jobs-wrapper{
    position: relative;
    width: 100%;
@@ -192,8 +192,8 @@ td.actions-control {
 }
 
 #queue_table{
- 
- 
+
+
 }
 
 
@@ -245,7 +245,7 @@ td.actions-control {
 }
 
 .chosen .play-button, .chosen .icon-row {
-  display: none; 
+  display: none;
 }
 .chosen .description {
   width: 100% !important;
@@ -278,7 +278,7 @@ td.actions-control {
     font-weight: bold;
     margin-bottom: 0.5em;
     line-height: 1.1em;
-    
+
 }
 
 .job_item .ellipses{
@@ -363,6 +363,10 @@ td.actions-control {
 
 .dropDown a:hover{
   color: #32B433;
+}
+
+.deleteJob {
+  color: #9C210C;
 }
 
 .dropDownWrapper{
@@ -676,7 +680,7 @@ table {
     /* rect(<top>, <right>, <bottom>, <left>) */
     clip: rect(0px, 50px, 1000px, 0px);
     -webkit-backface-visibility: hidden;
-    border-radius: 50%;    
+    border-radius: 50%;
 }
 
 .perecent_circle .mask {
@@ -720,7 +724,7 @@ table {
      text-align: center;
      top: 10.5px;
      left: 2px;
-	 font-family: 'source_sans_proextralight'; 
+	 font-family: 'source_sans_proextralight';
 }
 
 
@@ -883,7 +887,7 @@ table {
     border-radius: 50%;
     width: 38px;
     height:38px;
-    
+
 }
 
 @-webkit-keyframes off {
@@ -892,11 +896,11 @@ table {
     -webkit-box-shadow: 0px 0px 6px 2px #B10000;
         -moz-box-shadow: 0px 0px 6px 2px #B10000;
             box-shadow: 0px 0px 6px 2px #B10000;
-   
+
     }
     90%{
      background: none; /* Old browsers */
-  
+
     }
     100% {
     background: #B10000; /* Old browsers */
@@ -910,11 +914,11 @@ table {
     -webkit-box-shadow: 0px 0px 6px 2px #B10000;
         -moz-box-shadow: 0px 0px 6px 2px #B10000;
             box-shadow: 0px 0px 6px 2px #B10000;
-   
+
     }
     90%{
      background: none; /* Old browsers */
-  
+
     }
     100% {
     background: #B10000; /* Old browsers */
@@ -927,11 +931,11 @@ table {
     -webkit-box-shadow: 0px 0px 6px 2px #DD8728;
         -moz-box-shadow: 0px 0px 6px 2px #DD8728;
             box-shadow: 0px 0px 6px 2px #DD8728;
-   
+
     }
     90%{
      background: none; /* Old browsers */
-  
+
     }
     100% {
     background: #DD8728; /* Old browsers */
@@ -945,11 +949,11 @@ table {
     -webkit-box-shadow: 0px 0px 6px 2px #DD8728;
         -moz-box-shadow: 0px 0px 6px 2px #DD8728;
             box-shadow: 0px 0px 6px 2px #DD8728;
-   
+
     }
     90%{
      background: none; /* Old browsers */
-  
+
     }
     100% {
     background: #DD8728; /* Old browsers */
@@ -958,14 +962,14 @@ table {
 }
 
 .job-status-light.one {
-  
+
 }
 
 
 .job-status-light.two {
- 
+
 }
 
 .job-status-light.three {
- 
+
 }
